package com.parseridea.powerpointparser.Iterator;

/**
 * Aggregator
 */
public interface Aggregate {
    /**
     * @return slide-iterator
     */
    Iterator getIterator();
}
